package seedu.duke;

// Placeholder class
public class Topic {

    // Placeholder method
    public boolean addNote(String name, String path) {
        return true;
    }

    // Placeholder method
    public void removeNote(String name) {

    }
}
